--- a/src/assets/modal.css
+++ b/src/assets/modal.css
@@ -1,23 +1,25 @@
 .modal {
-    border: 1px solid #d3d3d3;
-    box-shadow: 2px 2px 1px #d3d3d3;
-    background-color: white;
+    /* border: 1px solid #7CF8FD; */
+    border: 1px solid white;
+    /* box-shadow: 2px 2px 1px #000; */
+    /* background-color: white; */
+    background-color: #353535;
     position: absolute;
-    top: 12vh;
-    left: 2%;
+    top: 14vh;
+    right: 3%;
     /* right: 0; */
     margin-left: auto;
     margin-right: auto;
-    width: 36%;
-    height: 80vh;
+    width: 30%;
+    height: 70vh;
+    border-radius: 6px;
+    color: white;
 }
 
 .thumbnail {
     width: 100%;
     height: 200px;
     text-align: center;
-    /* display: flex;
-    justify-content: center; */
 }
 
 .thumbnail > img {
@@ -31,6 +33,8 @@
     width: 100%;
     height: 30px;
     margin-bottom: 10px;
+    background-color: #707070;
+    color: white;
 }
 
 .footer {
@@ -50,3 +54,8 @@
     padding: 10px;
     border-bottom: 1px solid #d3d3d3;
 }
+
+
+/* .imgaaa {
+    border-radius: 4px 0 0 0;
+} */
