--- a/src/components/flowchart/index.css
+++ b/src/components/flowchart/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #353535;
+    background-color: #1F1F1F;
 }
 
 #svg {
@@ -16,9 +16,10 @@ body {
 #chart {
     position: relative;
     top: 0;
-    left: 40%;
+    /* left: 40%; */
     width: 100%;
-    height: 600px;
+    /* height: 600px; */
+    height: 200vh;
     border: 1px solid #dfdfdf;
 }
 
